myteo/test/analyze/type_check/match/statement.exp
Error: Expected type `Unit` but found `Int`
test/analyze/type_check/match/statement.myte:18:14
 18 |     | true -> 1
    |               ^

Error: Expected type `Unit` but found `Int`
test/analyze/type_check/match/statement.myte:23:11-25:5
 23 | /     | x -> match (true) {
    | |            ^^^^^^^^^^^^^^
 24 | |       | y -> 1
    | | ^^^^^^^^^^^^^^
 25 | |     }
    | \ ^^^^^^